# backend-poty

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  discover.py  game.py  news.py  users.py
app/core/: config.py  db.py  security.py
app/models/: user.py
app/repositories/: game_repo.py  user_repo.py
app/schemas/: auth.py  discover.py  game.py  news.py  user.py
app/services/: auth_service.py  discover_service.py  game_service.py  news_service.py
scripts/: reset_db.py
