[tool.poetry]
name = "potynews-backend"
version = "0.1.0"
description = "Backend enxuto do PotyNews"
authors = ["Poty Hub <dev@potyhub.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
email-validator = "^2.2.0"
pydantic-settings = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.2"
rapidfuzz = "^3.10.1"
python-multipart = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
